syntax = "proto3";

package site;

option java_package = "com.windchat.proto.platform";
option java_outer_classname = "ApiPushAuthProto";

/**
 * 接口名<action_name>：
 * 		api.push.auth
 *
 * 功能描述：
 * 		client -> platform
 * 		push授权，授权平台允许接受这个站点的PUSH，
 * 		用户登陆站点时，提供平台用户的user_token
 *
 * 支持的错误ID：
 * 		success						//成功
 * 		error.alert					//失败
 */
service ApiPushAuthSiteService {
	rpc auth (ApiPushAuthRequest) returns (ApiPushAuthResponse);
}

message ApiPushAuthRequest {
	string site_address = 1; //站点地址
	string site_port = 2; //站点端口号
	string site_name = 3; //站点名称
	string user_token = 4; //push发送需要的token
}

message ApiPushAuthResponse {
	bool open_secret_chat = 1; //平台是否开启该站点
}